add Membership Service and some test

--- a/ClubMembership/appsettings.json
+++ b/ClubMembership/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=(local);uid=sa;password=12345;database=ClubMembership"
+  },
+  "FireBaseConfig": {
+    "ApiKey": "",
+    "Username": "",
+    "Password": "",
+    "Bucket": ""
   }
 }
