--- a/ClubMembership/appsettings.json
+++ b/ClubMembership/appsettings.json
@@ -9,10 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=(local);uid=sa;password=12345;database=ClubMembership"
   },
-  "FireBaseConfig": {
-    "ApiKey": "",
-    "Username": "",
-    "Password": "",
-    "Bucket": ""
+  "Cloudinary": {
+    "CLOUDINARY_URL": "cloudinary://481284852433495:u4tKhkdLgrTufmys273PmbMQyF4@drujagfpl"
   }
 }
